[workspace]
members = [
    "netbench*",
]
exclude = [
    "netbench-cdk",
    "netbench-driver-s2n-quic",
    "netbench-driver-native-tls"
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
